--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,16 @@
-asgi-redis==1.3.0
-asgiref==1.1.1
-attrs==16.3.0
-autobahn==0.18.2
-Automat==0.5.0
-channels==1.1.3
-constantly==15.1.0
-daphne==1.2.0
-dj-database-url==0.4.2
-Django==1.11
-gunicorn==19.7.1
-incremental==16.10.1
-msgpack-python==0.4.8
-pytz==2017.2
+asgi-redis==0.8.3
+asgiref==0.9
+autobahn==0.12.1
+channels==0.9.3
+daphne==0.9.1
+dj-database-url==0.4.0
+Django==1.9.3
+haikunator==1.0.1
+msgpack-python==0.4.7
+psycopg2==2.6.1
 redis==2.10.5
 six==1.10.0
-Twisted==17.1.0
-txaio==2.7.0
-whitenoise==3.3.0
-zope.interface==4.4.0
-psycopg2==2.6.2
-django-redis-cache==1.7.1
+Twisted==15.5.0
+txaio==2.2.1
+wheel==0.24.0
+zope.interface==4.1.3
