--- a/requirements.txt
+++ b/requirements.txt
@@ -18,5 +18,5 @@ Twisted==17.1.0
 txaio==2.7.0
 whitenoise==3.3.0
 zope.interface==4.4.0
-psycopg2==2.7.1
+psycopg2-binary==2.7.1
 django-redis-cache==1.7.1
